--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,6 +8,7 @@
 		"esbenp.prettier-vscode",
 		"ms-azuretools.vscode-docker",
 		"ms-dotnettools.csharp",
+		"ms-mssql.mssql",
 		"redhat.vscode-xml",
 		"visualstudioexptteam.vscodeintellicode"
 	],
