--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,12 +4,15 @@
 
 	// List of extensions which should be recommended for users of this workspace.
 	"recommendations": [
+		"blackmist.linkcheckmd",
+		"davidanson.vscode-markdownlint",
 		"docsmsft.docs-authoring-pack",
 		"esbenp.prettier-vscode",
 		"ms-azuretools.vscode-docker",
 		"ms-dotnettools.csharp",
 		"ms-mssql.mssql",
 		"redhat.vscode-xml",
+		"streetsidesoftware.code-spell-checker",
 		"visualstudioexptteam.vscodeintellicode"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
