--- a/vscode-settings.json
+++ b/vscode-settings.json
@@ -7,9 +7,13 @@
 	"editor.suggestSelection": "first",
 	"files.trimTrailingWhitespace": true,
 	"git.autofetch": true,
+	"terminal.integrated.enablePersistentSessions": false,
 	"window.autoDetectColorScheme": true,
 	// "workbench.colorTheme": "Default Dark+",
 	"workbench.startupEditor": "welcomePage",
+	"[dockercompose]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
 	"[html]": {
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
@@ -20,6 +24,9 @@
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
 	"[jsonc]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"[markdown]": {
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
 	// Extension settings
