VS Code Configuration Refinement
Adds SQL database model preload to ADS
Associates SQL plan files to the execution plan editor
Sets formatter for TypeScript and React
Disables linting errors for tabs in Markdown code blocks

Signed-off-by: Shawn Mannen <57607869+l87y7m@users.noreply.github.com>

--- a/ads-settings.json
+++ b/ads-settings.json
@@ -8,12 +8,16 @@
 	"files.trimTrailingWhitespace": true,
 	"mssql.format.datatypeCasing": "uppercase",
 	"mssql.format.keywordCasing": "uppercase",
+	"mssql.tableDesigner.preloadDatabaseModel": true,
 	"queryEditor.messages.showBatchTime": true,
 	"window.autoDetectColorScheme": true,
 	"workbench.colorTheme": "Default Dark Azure Data Studio",
+	"workbench.editorAssociations": {
+		"*.{sqlplan}": "workbench.editor.executionplan"
+	},
 	"workbench.enablePreviewFeatures": true,
 	"workbench.startupEditor": "welcomePage",
 	// Extension settings
 	"vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue"
-	// Databbse connections
+	// Database connections
 }
