--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -13,7 +13,7 @@
 		"ms-mssql.mssql",
 		"redhat.vscode-xml",
 		"streetsidesoftware.code-spell-checker",
-		"visualstudioexptteam.vscodeintellicode"
+		"visualstudioexptteam.vscodeintellicode" // ADS & VS Code
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": []
