--- a/vscode-settings.json
+++ b/vscode-settings.json
@@ -9,7 +9,7 @@
 	"git.autofetch": true,
 	"terminal.integrated.enablePersistentSessions": false,
 	"window.autoDetectColorScheme": true,
-	// "workbench.colorTheme": "Default Dark+",
+	// "workbench.colorTheme": "Default Dark Modern",
 	"workbench.startupEditor": "welcomePage",
 	"[dockercompose]": {
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
@@ -29,10 +29,17 @@
 	"[markdown]": {
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
+	"[typescript]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"[typescriptreact]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
 	// Extension settings
 	// // Docs Authoring Pack Begin // //
 	"docs-build.userType": "Public Contributor",
 	"markdownlint.config": {
+		"MD010": { "code_blocks": false },
 		"MD028": false,
 		"MD025": {
 			"front_matter_title": ""
